--- a/source/_posts/BFC-2022-4-10.md
+++ b/source/_posts/BFC-2022-4-10.md
@@ -7,23 +7,27 @@ date: 2022-04-10 13:50:54
 ---
 
 
-## BFC(块级格式化上下文)
+## `BFC`(块级格式化上下文)
 
-#### 什么是BFC
+#### 什么是`BFC`
 
 指的是一个块级渲染作用域,该区域内拥有一套完整的规则来约束块级盒子的布局,且与区域外部无关.
 
-#### 为什么要使用BFC
+#### 为什么要使用`BFC`
 
 当一个盒子不设置高度,当其中的子元素都浮动时,这个盒子便无法撑起自身.
 
 ![1649573049146.png](https://s2.loli.net/2022/04/10/VB3xt8R4fheSGKg.png)
 
-这个问题可以使用BFC来解决,形成一个块级格式化上下文.
+这个问题可以使用`BFC`来解决,形成一个块级格式化上下文.
 
-#### 那么如何创建BFC
+#### 那么如何创建`BFC`
 
 - <code>float</code>的值不为<code>none</code>
+
+![1649573470436.png](https://img-blog.csdnimg.cn/img_convert/1b86ee8550af6178fa56345c70ffa9cb.png)
+
+- <code>position</code>的值不为<code>static</code>或<code>relative</code>
 
 ![](https://s2.loli.net/2022/04/10/nYNCFSL9a7pd5vb.png)
 
